--- a/index.html
+++ b/index.html
@@ -2,6 +2,13 @@
 <link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">
 <html>
   <body>
+    <div class="password-for-file-popup">
+      <div class="password-for-file-popup-div"> 
+        <h6 class="password-for-file-popup-text">Enter your password</h6>
+        <input class="password-for-file-popup-input" type="text">
+        <button class="password-for-file-popup-button">Continue</button>
+      </div>
+    </div>
     <div id="container">
 
     </div>
@@ -10,6 +17,39 @@
 </html>
 
 <style>
+  .password-for-file-popup {
+    position: fixed;
+    background-color: white;
+    border-top: 1px;
+    top: 50%;
+    left: 50%;
+    height: 300px;
+    width: 420px;
+    border-radius: 12px;
+    transform: translate(-50%, -50%);
+    box-shadow: 10px 10px 300px 200px rgba(0,0,0,0.3);
+  }
+
+  .password-for-file-popup-div {
+    height: 100%;
+    width: 90%;
+    margin-left: 5%;
+    display: grid;
+  }
+
+  .password-for-file-popup-text {
+    background-color: red;
+    margin: 0;
+    padding: 0;
+    grid-row: 1/3;
+    text-align: center;
+    font-size: 16px;
+  }
+
+  .password-for-file-popup-input {
+    grid-row: 3/4;
+  }
+
   html, body {
     height: 100%;
     width: 100%;
