--- a/index.html
+++ b/index.html
@@ -6,63 +6,40 @@
     <div id="container">
       <div class="main-container">
 
-        <div class="logged-in-main">
-
-          <div class="main-top-banner">
-            <div>
-
-              <h1 class="main-top-banner-amount-num">Đ500.45902</h1>
-              <p class="main-top-banner-amount-text">Account Balance</p>
-            </div>
-          </div>
-
-          <div class="main-side-banner">
-            <div><p>Wallet</p></div>
-            <div><p>Send Funds</p></div>
-            <div><p>Receive Funds</p></div>
-            <div><p>Settings</p></div>
-          </div>
-
-          <div class="main-main-box">
-            <div class="send-recieve">
-              <div class="send-recieve-send"><p>Send Funds</p></div>
-              <div class="send-recieve-recieve"><p>Receive Funds</p></div>
-            </div>
-
-            <div class="transaction-history-title">Transaction History</div>
-
-            <div class="incoming-outgoing">
-              <div>
-                  <p><span class="incoming-color-text">Incoming - Amount: Đ500.00000</span> | 09:00 05/09/2018 | <span>Transaction ID:</span> aksjnchfbgshbcj872jsnhbdgytu76e</p>
-                  <p><span class="incoming-color-text">Incoming - Amount: Đ500.00000</span> | 09:00 05/09/2018 | <span>Transaction ID:</span> aksjnchfbgshbcj872jsnhbdgytu76e</p>
-                  <p><span class="incoming-color-text">Incoming - Amount: Đ500.00000</span> | 09:00 05/09/2018 | <span>Transaction ID:</span> aksjnchfbgshbcj872jsnhbdgytu76e</p>
-                  <p><span class="incoming-color-text">Incoming - Amount: Đ500.00000</span> | 09:00 05/09/2018 | <span>Transaction ID:</span> aksjnchfbgshbcj872jsnhbdgytu76e</p>
-                  <p><span class="incoming-color-text">Incoming - Amount: Đ500.00000</span> | 09:00 05/09/2018 | <span>Transaction ID:</span> aksjnchfbgshbcj872jsnhbdgytu76e</p>
-                  <p><span class="incoming-color-text">Incoming - Amount: Đ500.00000</span> | 09:00 05/09/2018 | <span>Transaction ID:</span> aksjnchfbgshbcj872jsnhbdgytu76e</p>
-                  <p><span class="incoming-color-text">Incoming - Amount: Đ500.00000</span> | 09:00 05/09/2018 | <span>Transaction ID:</span> aksjnchfbgshbcj872jsnhbdgytu76e</p>
-                  <p><span class="incoming-color-text">Incoming - Amount: Đ500.00000</span> | 09:00 05/09/2018 | <span>Transaction ID:</span> aksjnchfbgshbcj872jsnhbdgytu76e</p>
-                  <p><span class="incoming-color-text">Incoming - Amount: Đ500.00000</span> | 09:00 05/09/2018 | <span>Transaction ID:</span> aksjnchfbgshbcj872jsnhbdgytu76e</p>
-                  <p><span class="incoming-color-text">Incoming - Amount: Đ500.00000</span> | 09:00 05/09/2018 | <span>Transaction ID:</span> aksjnchfbgshbcj872jsnhbdgytu76e</p>
-                  <p><span class="incoming-color-text">Incoming - Amount: Đ500.00000</span> | 09:00 05/09/2018 | <span>Transaction ID:</span> aksjnchfbgshbcj872jsnhbdgytu76e</p>
-                  <p><span class="incoming-color-text">Incoming - Amount: Đ500.00000</span> | 09:00 05/09/2018 | <span>Transaction ID:</span> aksjnchfbgshbcj872jsnhbdgytu76e</p>
-                  <p><span class="incoming-color-text">Incoming - Amount: Đ500.00000</span> | 09:00 05/09/2018 | <span>Transaction ID:</span> aksjnchfbgshbcj872jsnhbdgytu76e</p>
-                  <p><span class="incoming-color-text">Incoming - Amount: Đ500.00000</span> | 09:00 05/09/2018 | <span>Transaction ID:</span> aksjnchfbgshbcj872jsnhbdgytu76e</p>
-                  <p><span class="incoming-color-text">Incoming - Amount: Đ500.00000</span> | 09:00 05/09/2018 | <span>Transaction ID:</span> aksjnchfbgshbcj872jsnhbdgytu76e</p>
-                  <p><span class="incoming-color-text">Incoming - Amount: Đ500.00000</span> | 09:00 05/09/2018 | <span>Transaction ID:</span> aksjnchfbgshbcj872jsnhbdgytu76e</p>
-                  <p><span class="incoming-color-text">Incoming - Amount: Đ500.00000</span> | 09:00 05/09/2018 | <span>Transaction ID:</span> aksjnchfbgshbcj872jsnhbdgytu76e</p>
-              </div>
-            </div>
-            <div class="load-more-button">Load 25+ More</div>
-          </div>
-        </div>
 
       </div>
     </div>
   </body>
-  <!--<script type="text/javascript" src="./src/bundle.js"></script>-->
+  <script type="text/javascript" src="./src/bundle.js"></script>
 </html>
 
 <style>
+  .load-more-button {
+    margin-left: 120px;
+    margin-top: 18px;
+    text-align: center;
+    width: 200px;
+    height: 32px;
+    background-color: none;
+    border: 1px solid #eff0f2;
+    border-radius: 10px;
+    background-color: #eff0f2;
+  }
+
+  .load-more-button:hover {
+    cursor: pointer;
+    background-color: #EFF0F2;
+  }
+
+  .load-more-button > p {
+    font-size: 16px;
+    color: #4A4D51;
+    padding-top: 7px;
+    margin: 0;
+    font-weight: thick;
+    margin-bottom: 10px;
+  }
+
   .incoming-outgoing {
     font-weight: thick;
     margin-left: 120px;
